# EBFM

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  README.md.orig  README_old.-md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_venv.sh  unlicensed
.github/: pull_request_template.md  pull_request_template.md.license
.github/workflows/: build-and-test.yaml  flake8.yaml  flake8.yml  release.yaml  reuse.yaml
docs/: ReleaseGuide.md
examples/: dem_and_mask.mat.license
src/: coupler.py  coupling.py  dummy.py  main.py  reader.py  utils.py
src/couplers/: __init__.py  base.py  dummyCoupler.py  oasisCoupler.py  yacCoupler.py
src/coupling/: __init__.py
src/coupling/components/: __init__.py  base.py  elmer_ice.py  icon_atmo.py
src/coupling/couplers/: __init__.py  base.py  dummyCoupler.py  oasisCoupler.py  yacCoupler.py  yacField.py
src/coupling/fields/: __init__.py  yacField.py
src/ebfm/: FINAL_create_restart_file.py  INIT.py  LOOP_EBM.py  LOOP_EBM_GHF.py  LOOP_EBM_LHF.py  LOOP_EBM_LWin.py  LOOP_EBM_LWout.py  LOOP_EBM_SHF.py  LOOP_EBM_SWin.py  LOOP_EBM_SWout.py  LOOP_EBM_insolation.py  LOOP_SNOW.py  LOOP_climate_forcing.py  LOOP_general_functions.py  LOOP_mass_balance.py  LOOP_write_to_file.py  __init__.py  config.py  constants.py  grid.py  logger.py  main.py  reader.py
src/ebfm/constants/: materials.py
src/ebfm/core/: FINAL_create_restart_file.py  INIT.py  LOOP_EBM.py  LOOP_EBM_GHF.py  LOOP_EBM_LHF.py  LOOP_EBM_SWin.py  LOOP_EBM_SWout.py  LOOP_EBM_insolation.py  LOOP_SNOW.py  (+3 more)
src/elmer/: mesh.py  parser.py
(+14 files in other folders)
