# SPDX-FileCopyrightText: 2025 EBFM Authors
#
# SPDX-License-Identifier: BSD-3-Clause

[project]
name = "EBFM"
dynamic = [ "version" ]
authors = [ {name="EBFM Authors"} ]
license = "BSD-3-Clause"
readme = "README.md"
dependencies = [
    "mpi4py >= 4.1",
    "mypy >= 1.0",
    "netCDF4 >= 1.7",
    "numpy >= 2.0",
    "pandas >= 2.0",
    "pandas-stubs >= 2.0",
    "pathlib",
    "pyproj",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pre-commit >= 4.0",
]

cpl = [
    "yac >= 3.8",
]

[project.scripts]
ebfm = "main:main"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.black]
line-length = 120
